# xmDriver

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md  TODO.md
apps/cli/: CMakeLists.txt  cli_common.cpp  cli_common.hpp  cmd_ddsm.cpp  cmd_imu.cpp  cmd_sbus.cpp  cmd_servo.cpp  commands.hpp  xmdriver_cli.cpp
src/: CMakeLists.txt
src/async_port/: CMakeLists.txt
src/async_port/include/async_port/: async_can.hpp  async_serial.hpp  ring_buffer.hpp
src/async_port/src/: async_serial.cpp
src/async_port/test/unit_test/: CMakeLists.txt  utest_async_lifecycle.cpp  utest_ring_buffer.cpp
src/devices/: CMakeLists.txt
src/devices/input_hid/: CMakeLists.txt  README.md
src/devices/input_hid/include/input_hid/: evdev_joystick.hpp  evdev_keyboard.hpp  hid_event_listener.hpp  joystick.hpp
src/devices/input_hid/src/: evdev_joystick.cpp  evdev_keyboard.cpp  evdev_reader.cpp  evdev_translate.cpp  hid_event_listener.cpp  keyboard.cpp  keyboard_handler.cpp  keyboard_mapping.cpp
src/devices/input_hid/test/: CMakeLists.txt  utest_input_hid.cpp
src/devices/input_sbus/: CMakeLists.txt
src/devices/input_sbus/include/input_sbus/: sbus_receiver.hpp
src/devices/input_sbus/src/: sbus_receiver.cpp  sbus_receiver_impl.cpp
src/devices/input_sbus/test/: CMakeLists.txt  test_sbus.cpp  test_sbus_receiver.cpp
src/devices/motor_akelc/: CMakeLists.txt
src/devices/motor_akelc/include/motor_akelc/: motor_akelc.hpp  motor_akelc_modbus.hpp
src/devices/motor_akelc/src/: motor_akelc.cpp  motor_akelc_modbus.cpp
src/devices/motor_akelc/test/: CMakeLists.txt  test_motor_akelc.cpp
src/devices/motor_registry/: CMakeLists.txt
src/devices/motor_registry/include/motor_registry/: register_all.hpp
src/devices/motor_registry/src/: register_all.cpp
src/devices/motor_registry/test/: CMakeLists.txt  test_register_all.cpp
src/devices/motor_vesc/: CMakeLists.txt
src/devices/motor_vesc/include/motor_vesc/: vesc_can_interface.hpp  vesc_frame.hpp  vesc_motor.hpp  vesc_state.hpp  vesc_status_packet.hpp
src/devices/motor_vesc/src/: vesc_can_interface.cpp  vesc_cmd_packet.cpp  vesc_motor.cpp  vesc_status_packet.cpp
src/devices/motor_vesc/test/: test_vesc_motor.cpp  utest_vesc_packet.cpp
src/devices/motor_vesc/test/devel/: test_vesc_driver.cpp
src/devices/motor_waveshare/: CMakeLists.txt
src/devices/motor_waveshare/include/motor_waveshare/: ddsm_210.hpp  ddsm_210_array.hpp  sms_sts_servo.hpp  sms_sts_servo_array.hpp
src/devices/motor_waveshare/src/: ddsm_210.cpp  ddsm_210_array.cpp  ddsm_210_frame.cpp  sms_sts_servo.cpp  sms_sts_servo_array.cpp  sms_sts_servo_impl.cpp
src/devices/motor_waveshare/src/servo/: SCSerial.cpp
src/devices/motor_waveshare/test/: CMakeLists.txt  test_ddsm210_array.cpp  test_motor_waveshare.cpp  test_sms_sts_array.cpp
src/devices/sensor_imu/: CMakeLists.txt
src/devices/sensor_imu/include/sensor_imu/: imu_hipnuc.hpp
src/devices/sensor_imu/src/: ch_serial.c  imu_hipnuc.cpp
src/devices/sensor_imu/test/: CMakeLists.txt  test_imu_hipnuc.cpp
src/devices/sensor_imu/test/devel/: test_hipnuc.cpp
src/hal/: CMakeLists.txt
src/hal/include/xmdriver/hal/: actuator_group.hpp  device.hpp  freshness.hpp  health_telemetry.hpp  imu.hpp  joystick.hpp  keyboard.hpp  motor_controller.hpp  motor_factory.hpp  rc_receiver.hpp  result.hpp  status.hpp  (+1 more)
src/hal/test/: CMakeLists.txt  test_actuator_group.cpp  test_freshness.cpp  test_hal_interfaces.cpp  test_health_telemetry.cpp  test_legacy_motor_adapter.cpp
src/input_hid/: CMakeLists.txt
src/input_hid/include/input_hid/: hid_event_listener.hpp  joystick.hpp  joystick_handler.hpp  keyboard.hpp  keyboard_handler.hpp
src/input_hid/src/: hid_event_listener.cpp  joystick.cpp  joystick_handler.cpp  keyboard.cpp  keyboard_handler.cpp  keyboard_mapping.cpp
src/input_hid/test/: CMakeLists.txt
src/input_sbus/: CMakeLists.txt
src/input_sbus/include/input_sbus/: sbus_receiver.hpp
src/input_sbus/test/: test_sbus.cpp
src/modbus_rtu/: CMakeLists.txt
src/modbus_rtu/include/modbus_rtu/: modbus_rtu_port.hpp
src/modbus_rtu/src/: modbus_rtu_port.cpp
src/motor_akelc/: CMakeLists.txt
src/motor_akelc/include/motor_akelc/: motor_akelc.hpp  motor_akelc_modbus.hpp
src/motor_akelc/src/: motor_akelc_modbus.cpp
src/motor_vesc/: CMakeLists.txt
src/motor_vesc/include/motor_vesc/: vesc_can_interface.hpp  vesc_motor.hpp
src/motor_vesc/src/: vesc_can_interface.cpp  vesc_cmd_packet.cpp
src/motor_vesc/test/: CMakeLists.txt
src/motor_waveshare/: CMakeLists.txt
src/motor_waveshare/include/motor_waveshare/: ddsm_210.hpp  ddsm_210_array.hpp  sms_sts_servo.hpp
src/motor_waveshare/src/: ddsm_210.cpp  ddsm_210_array.cpp  ddsm_210_frame.cpp  sms_sts_servo_array.cpp  sms_sts_servo_impl.cpp
src/robots/: CMakeLists.txt
src/robots/ackermann_vesc/: DESIGN.md
src/robots/mobile_base/: CMakeLists.txt  README.md
src/robots/mobile_base/docs/: can_protocol.md
src/robots/mobile_base/src/: mobile_base_can_client.cpp  mobile_base_driver.cpp
src/robots/mobile_base/test/: CMakeLists.txt  test_command_tracker.cpp  test_core_codec.cpp  test_dbc_sync.cpp  test_e2e.cpp  test_mobile_base_can_client.cpp  test_mobile_base_driver.cpp  test_swerve_v1.cpp
src/robots/mobile_base_can/: CMakeLists.txt  README.md
src/robots/mobile_base_can/docs/: can_protocol.md  mobile_base.dbc
src/robots/mobile_base_can/src/: mobile_base_can_client.cpp
src/robots/mobile_base_can/test/: CMakeLists.txt  test_command_tracker.cpp  test_core_codec.cpp  test_dbc_sync.cpp  test_e2e.cpp  test_mobile_base_can_client.cpp  test_swerve_v1.cpp
src/sensor_imu/: CMakeLists.txt
src/sensor_imu/include/sensor_imu/: imu_hipnuc.hpp
src/sensor_imu/src/: imu_hipnuc.cpp
src/transport/: CMakeLists.txt
src/transport/async_port/: CMakeLists.txt
src/transport/async_port/src/: async_can.cpp  async_serial.cpp  serial_baud_linux.cpp
src/transport/interface/: CMakeLists.txt
src/transport/modbus_rtu/: CMakeLists.txt
src/transport/modbus_rtu/src/: modbus_rtu_port.cpp
src/transport/modbus_rtu/test/: CMakeLists.txt  utest_modbus_rtu.cpp
(+227 files in other folders)
